--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -171,3 +171,17 @@ h2 {
     letter-spacing: 5px;
   }
 }
+
+.question-number {
+  color: #13432c;
+  font-family: 'Modulus Pro', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.phase-name {
+  color: #13432c;
+  font-family: 'Modulus Pro', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+}
