Adiciona história e corrige CSS

--- a/frontend/src/app/routes/test/info-history/info-history.component.html
+++ b/frontend/src/app/routes/test/info-history/info-history.component.html
@@ -1,4 +1,4 @@
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content id="dialog1" class="mat-typography">
     <div class="content">
       <h3 class="finish" *ngIf="personalityData">{{ personalityData.storyTitle }}</h3>
       <p class="p-content" *ngIf="personalityData">
