--- a/frontend/src/app/routes/test/info/test-info.component.scss
+++ b/frontend/src/app/routes/test/info/test-info.component.scss
@@ -7,8 +7,8 @@
 
 .p-content {
   font-family: 'Modulus Pro', sans-serif;
-  font-size: 15px;
-  text-align: justify;
+  font-size: 18px;
+  text-align: center;
 }
 
 .title {
