--- a/frontend/src/app/routes/home/home.component.scss
+++ b/frontend/src/app/routes/home/home.component.scss
@@ -1,161 +1,185 @@
 body {
-  background-image: url('/assets/images/backgrounds/blurred-home-background.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  font-family: 'Modulus Pro', sans-serif;
-  height: 100vh;
-  width: 100vw;
+  background-color: #0C1020;
 }
 
-#container {
+.big-logo img {
+  width: 100%;
+  max-width: 400px;
+}
+
+.container-edge {
+  background-image: url(../../../assets/images/backgrounds/galaxy-5.svg);
+  min-height: 100vh;
+  background-color: #161D39;
+  position: relative;
+  max-width: 853px;
+  margin: 0 auto;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  max-width: 853px;
+  margin: 0 auto 18px auto;
+  padding: 48px 24px;
+}
+
+.container {
+  width: 100%;
+  max-width: 393px;
+  margin: 0 auto;
+  padding-bottom: 88px;
+  margin-top:20%
+}
+
+.big-logo img {
+  margin: 64px auto;
+  max-width: 385px;
+}
+
+.screen-info {
+  margin: 0 24px;
+}
+
+h1 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; 
+  opacity: 0.7;
+}
+
+h2 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 25.5px;
+  margin-bottom: 32px;
+}
+
+.card {
+  border-radius: 24px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  background: linear-gradient(180deg, #252C4A 0%, #252C4A 100%, #252C4A 100%);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+  margin: 0 18px;
+}
+
+.card-text {
+  display: flex;
+  gap: 10px;
+  margin: 24px 4px 4px 24px;
+  align-items: flex-end;
+}
+
+h3 {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+h4 {
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Fredoka;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.buttons {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 50px;
-  height: 100vh;
 }
 
-#title {
-  color: #1C4A34;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 200px;
-  font-weight: 600;
-  letter-spacing: 25px;
-  line-height: normal;
-  text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
+#create-game-button{
+  background-color: #676F94;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 42px;
 }
 
-#buttons-container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  justify-content: center;
+#continue-game-button {
+  background: #21376B;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 32px;
+  margin-top: 12px;
+}
+
+#result-game-button {
+  background: #6B3721;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 32px;
+  margin-top: 12px;
+}
+
+.text-link {
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Fredoka;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  display: block;
   text-align: center;
+  margin: 18px 24px 20px 24px;
 }
 
-.button-container button,
-.button-container a {
-  height: 60px;
-  width: 300px;
-  font-size: 15px;
-  border-radius: 50px;
-  font-family: 'Modulus Pro', sans-serif;
-}
-
-.example-disabled {
-  display: inline-block;
-}
-
-.material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 48;
-}
-
-.info {
+#return-button {
+  border-radius: 16px 16px 0px 0px;
+  background: #F66103;
+  width: 64px;
+  height: 64px;
+  border: none;
   display: flex;
-  justify-content: right;
-}
-
-.info-container {
-  display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 36px;
   cursor: pointer;
-  width: 100px;
 }
 
-.info-label {
-  color: #0b2447;
-  font-size: 12px;
-  font-family: 'Helvetica', sans-serif;
-  margin-top: -2px;
-  margin-bottom: 0;
-}
-
-.disclaimer {
-  font-style: italic;
-  color: #888;
-  margin-top: 4%;
-}
-
-@media only screen and (max-width: 1000px) {
-  #title {
-    font-size: 65px;
-    letter-spacing: 5px;
-  }
-}
-
-body::before {
-  content: "";
+.planets {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 15%;
-  background: linear-gradient(to bottom, black, transparent);
-  z-index: 1;
-}
-
-body::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 15%;
-  background: linear-gradient(to top, black, transparent);
-  z-index: 1;
-}
-
-.back {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  z-index: 2;
-}
-
-.info{
-  position: fixed; 
-  bottom: 0; 
   right: 0;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  z-index: 2;
+  bottom: 0;
+  z-index: -1;
 }
 
-.bold {
-  font-weight: bold;
-}
-
-#card {
-  background-color: rgba(255, 255, 255, 0.6);
-  z-index: 2;
-}
-
-#title {
-  color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 40px;
-  font-weight: 600;
-  letter-spacing: 5px;
-  text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
-  text-align: center;
-  position: absolute;
-  margin-top: 10px;
-  top: 10px;
+.footer {
+  position: fixed;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 100%;
-  z-index: 2;
-  margin-top: 16px;
-}
-
-@media only screen and (max-width: 600px) {
-  #title {
-      font-size: 65px;
-      letter-spacing: 5px;
-  }
+  max-width: 742px;
+  display: flex;
+  justify-content: flex-start;
 }
