--- a/frontend/src/app/routes/test/result/result.component.scss
+++ b/frontend/src/app/routes/test/result/result.component.scss
@@ -1,136 +1,190 @@
 body {
-    align-items: center;
-    background-color: #13432c;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    display: flex;
-    font-family: 'Modulus Pro', sans-serif;
-    height: 100vh;
-    width: 100vw;
+  background-color: #0C1020;
 }
 
-#title {
-    color: #ffffff;
-    font-family: 'Modulus Pro', sans-serif;
-    font-size: 50px;
-    font-weight: 600;
-    letter-spacing: 5px;
-    text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
-    text-align: center;
-    position: absolute;
-    margin-top: 10px;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
+.container-edge {
+  background-image: url(../../../../assets/images/backgrounds/galaxy-5.svg);
+  min-height: 100vh;
+  background-color: #161D39;
+  position: relative;
+  max-width: 853px;
+  margin: 0 auto;
+  border: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-@media only screen and (max-width: 600px) {
-    #title {
-        font-size: 50px;
-        letter-spacing: 5px;
-    }
+.header {
+  display: flex;
+  justify-content: space-between;
+  max-width: 853px;
+  margin: 0 auto 18px auto;
+  padding: 16px 24px 0 24px;
 }
 
-.material-icons.color_white {
-    color: #ffffff;
+.logo {
+  color: #FFF;
+  font-family: Fredoka One;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: auto 0;
 }
 
-.back {
-    position: fixed;
-    top: 10px;
-    left: 10px;
+.user-data {
+  display: flex;
+  align-items: center;
 }
 
-.imagem {
-    border-radius: 50%;
-    margin-bottom: 5%;
+.user-data .text-block {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  margin: 0;
 }
 
-img {
-    width: 80%;
-    border-radius: 50%;
-    display: block;
-    margin: 0 auto;
+.user-name {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 16px;
+  margin-bottom: 8px;
 }
 
-.content {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.user-code {
+  color: rgba(255, 255, 255, 0.50);
+  font-family: Fredoka;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  margin-bottom: 0;
 }
 
-body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 15%;
-    background: linear-gradient(to bottom, black, transparent);
-    z-index: 1;
-  }
-  
-  body::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 15%;
-    background: linear-gradient(to top, black, transparent);
-    z-index: 1;
-  }
-  
-  .back {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 2;
-  }
-  
-  .info{
-    position: fixed; 
-    bottom: 0; 
-    right: 0;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    z-index: 2;
-  }
-  
-  .bold {
-    font-weight: bold;
-  }
-  
-  #card {
-    background-color: rgba(255, 255, 255, 0.6);
-    z-index: 2;
-  }
-  
-  #title {
-    color: #ffffff;
-    font-family: 'Modulus Pro', sans-serif;
-    font-size: 40px;
-    font-weight: 600;
-    letter-spacing: 5px;
-    text-shadow: 1px 3px 5px rgba(48, 29, 29, 0.25);
-    text-align: center;
-    position: absolute;
-    margin-top: 10px;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    z-index: 2;
-    margin-top: 16px;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    #title {
-        font-size: 65px;
-        letter-spacing: 5px;
-    }
-  }
+.galaxy {
+  width: 50px;
+  height: 50px;
+  flex-shrink: 0;
+  margin-left: 12px;
+}
+
+.container {
+  width: 100%;
+  max-width: 393px;
+  margin: 0 auto;
+  padding-bottom: 88px;
+  text-align: center;
+}
+
+.card {
+  border-radius: 24px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  background: linear-gradient(180deg, #252C4A 0%, #252C4A 100%, #252C4A 100%);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+  margin: 0 18px;
+}
+  /* especifico dessa pagina */
+h1  {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 32px;
+  font-weight: 400;
+}
+
+h2  {
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 16px;
+  opacity: 0.7;
+}
+
+h3 {
+  color: #FFF;
+  text-align: center;
+  font-family: Fredoka;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25.5px;
+  margin-top: 32px;
+}
+
+.card-text {
+  text-align: center;
+  margin: 24px 0;
+}
+
+.exploring-planet-top {
+  width: 82.5%;
+  max-width: 393px;
+  margin: 0 auto;
+}
+
+.exploring-planet-bottom {
+  width: 74.5%;
+  max-width: 354px;
+  margin: -8px auto 32px auto;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+}
+
+#create-game-button{
+  background-color: #676F94;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 36px;
+}
+
+#continue-game-button {
+  background: #21376B;
+  border: 1px solid rgba(255, 255, 255, 0.10);
+  color: #FFF;
+  font-family: Fredoka;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 0px;
+  border-radius: 999px;
+  padding: 24px 32px;
+  margin-top: 12px;
+}
+
+#return-button {
+  border-radius: 16px 16px 0px 0px;
+  background: #F66103;
+  width: 64px;
+  height: 64px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 36px;
+  cursor: pointer;
+}
+
+.planets {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 742px;
+  display: flex;
+  justify-content: flex-start;
+}
