--- a/frontend/src/app/routes/test/statement/statement.component.scss
+++ b/frontend/src/app/routes/test/statement/statement.component.scss
@@ -1,187 +1,273 @@
 body {
-  align-items: center;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  display: flex;
-  font-family: 'Modulus Pro', sans-serif;
-  height: 100vh;
-  justify-content: center;
-  width: 100vw;
+    background-color: #0C1020;
+}
+  
+.container-edge {
+    background-image: url(../../../../assets/images/backgrounds/galaxy-5.svg);
+    min-height: 100vh;
+    background-color: #161D39;
+    position: relative;
+    max-width: 853px;
+    margin: 0 auto;
+    border: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.material-icons.color_white {
-  color: #ffffff;
+.header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 853px;
+    margin: 0 auto 18px auto;
+    padding: 16px 24px 0 24px;
 }
 
-.back {
-  position: fixed;
-  top: 10px;
-  left: 10px;
+.logo {
+    color: #FFF;
+    font-family: Fredoka One;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin: auto 0;
 }
 
-.question {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 60%;
+.user-data {
+    display: flex;
+    align-items: center;
 }
 
-.statement-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 60%;
+.user-data .text-block {
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    margin: 0;
 }
 
-#card {
-  padding: 20px;
-  overflow: auto;
-  position: relative;
-  background-color: rgba(255, 255, 255, 0.8);
+.user-name {
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 16px;
+    margin-bottom: 8px;
 }
 
-h2 {
-  color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
-  font-weight: bold;
-  font-size: 20px;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  color: #13432c;
-  text-align: center;
-  font-style: normal;
-  font-weight: 500px;
-  line-height: 25.5px;
+.user-code {
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Fredoka;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    margin-bottom: 0;
 }
 
-.button {
-  color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px;
+.galaxy {
+    width: 50px;
+    height: 50px;
+    flex-shrink: 0;
+    margin-left: 12px;
 }
 
-.text {
-  color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 25px;
+.container {
+    width: 100%;
+    max-width: 393px;
+    margin: 0 auto;
+    padding-bottom: 88px;
 }
 
-.button {
-  font-weight: bold;
+.card {
+    border-radius: 24px;
+    border: 1px solid rgba(255, 255, 255, 0.05);
+    background: linear-gradient(180deg, #252C4A 0%, #252C4A 100%, #252C4A 100%);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+    margin: 0 18px;
+}
+    /* especifico dessa pagina */
+h1  {
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 32px;
+    font-weight: 400;
 }
 
-.options {
-  margin-top: 30px;
+h2  {
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 16px;
+    opacity: 0.7;
 }
 
-.option {
-  color: #181515;
-  text-align: left;
-  font-family: 'Modulus Pro', sans-serif;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 16px;
+h3 {
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 25.5px;
+    margin-top: 32px;
 }
 
-.custom-button {
-  background-color: #13432c;
-  color: #fff;
+.card-text {
+    margin: 24px 0;
 }
 
-.example-flex-container {
-  display: flex;
-  justify-content: space-between;
+.exploring-planet-top {
+    width: 82.5%;
+    max-width: 393px;
+    margin: 0 auto;
 }
 
-.example-button-container {
-  flex: 2;
-  text-align: center;
-  margin-left: 5px;
-  margin-right: 5px;
+.exploring-planet-bottom {
+    width: 74.5%;
+    max-width: 354px;
+    margin: -8px auto 32px auto;
 }
 
-.custom-button {
-  background-color: #13432c;
-  color: #fff;
-  font-size: 20px;
-  font-weight: bold;
-  width: 120px;
-  height: 90px;
+.buttons {
+    display: flex;
+    flex-direction: column;
 }
 
-.button {
-  margin: 0;
+#create-game-button{
+    background-color: #676F94;
+    border: 1px solid rgba(255, 255, 255, 0.10);
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0px;
+    border-radius: 999px;
+    padding: 24px 42px;
+}
+
+#continue-game-button {
+    background: #21376B;
+    border: 1px solid rgba(255, 255, 255, 0.10);
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0px;
+    border-radius: 999px;
+    padding: 24px 32px;
+    margin-top: 12px;
+}
+
+#return-button {
+    border-radius: 16px 16px 0px 0px;
+    background: #F66103;
+    width: 64px;
+    height: 64px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 36px;
+    cursor: pointer;
+}
+
+.planets {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    max-width: 742px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .custom-progress-bar {
-  background-color: #b2eed1 !important;
-  margin-top: 20px;
-  margin-bottom: 1px;
+    height: 20px !important;
 }
 
-.mat-mdc-progress-bar {
-  --mdc-linear-progress-active-indicator-color: #13432c;
+.custom-progress-bar .mat-progress-bar-fill::after {
+    background-color: #9BD552 !important;
 }
 
-.info {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin-right: 10px;
-  margin-bottom: 10px;
-}
-
-.bold {
-  font-weight: bold;
-}
-
-#card2 {
-  background-color: rgba(255, 255, 255, 0.6);
-}
-
-#title {
-  color: #ffffff;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 50px;
-  font-weight: 600;
-  letter-spacing: 5px;
-  text-shadow: 1px 3px 5px rgba(23, 15, 15, 0.95);
-  text-align: center;
-  position: absolute;
-  margin-top: 10px;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100%;
-}
-
-@media only screen and (max-width: 600px) {
-  #title {
-    font-size: 65px;
-    letter-spacing: 5px;
+.custom-progress-bar {
+    width: 301px;
+    height: 8.246px;
   }
+
+.example-button-container{
+    padding: 8px 0;
+    text-align: left;
 }
 
-.question-number {
-  color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 18px;
-  font-weight: bold;
+.example-button-container button {
+    width: 100%;
+    height: 100%;
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    box-shadow: none;
+    border-radius: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.20);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+}
+
+.example-button-container p {
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    padding: 16px 16px 8px 16px;
+}
+
+.card {
+    padding-bottom: 12px;
+    padding-left: 18px;
+    padding-right: 18px;
 }
 
 .phase-name {
-  color: #13432c;
-  font-family: 'Modulus Pro', sans-serif;
-  font-size: 18px;
-  font-weight: bold;
+    color: #FFF;
+    font-family: Fredoka;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    margin-bottom: 4px;
+}
+
+h4 {
+    color: rgba(255, 255, 255, 0.50);
+    font-family: Fredoka;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 16px;
+    margin: 16px 2px 4px 0;
+}
+
+.progress-bar {
+    margin: 4px auto;
+    width: 99.6%;
+    height: 8.246px;
+    background-color: #EEE;
+    border-radius: 24px;
+}
+
+.progress-track {
+    height: 100%;
+    background-color: #9BD552;
+    border-radius: 24px;
+    width: 0;
+    transition: width 0.5s ease-in-out;
 }
