--- a/frontend/src/assets/fonts/fonts.scss
+++ b/frontend/src/assets/fonts/fonts.scss
@@ -53,3 +53,39 @@
   font-style: normal;
   font-weight: 900;
 }
+
+@font-face {
+  font-family: 'Fredoka';
+  src: url('./fredoka/Fredoka-Bold.ttf') format('truetype');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Fredoka';
+  src: url('./fredoka/Fredoka-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Fredoka';
+  src: url('./fredoka/Fredoka-Medium.ttf') format('truetype');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Fredoka';
+  src: url('./fredoka/Fredoka-Regular.ttf') format('truetype');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Fredoka';
+  src: url('./fredoka/Fredoka-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'Fredoka One';
+  src: url('./fredoka-one/FredokaOne-Regular.ttf') format('truetype');
+  font-weight: 600;
+}
