--- a/frontend/src/app/routes/test/code-result/code-result.component.html
+++ b/frontend/src/app/routes/test/code-result/code-result.component.html
@@ -1,12 +1,9 @@
 <body>
     <div class="container-edge">
-        <div class="header">
+        <div class="container">
             <div class="big-logo">
                 <img src="./../../../../assets/images/logos/logo-verse.png">
             </div>
-        </div>
-        
-        <div class="container">
             <div class="screen-info">
                 <h1>Ver meu resultado</h1>
                 <h2>Informe o seu código de usuário para ver o seu resultado!</h2>
@@ -20,7 +17,7 @@
                 
                 <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
                     <div id="card-form">
-                        <mat-form-field class="card-form-field" style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
                                 Digite aqui
                             </mat-label>
