--- a/frontend/src/app/routes/test/continuation/test-continuation.component.html
+++ b/frontend/src/app/routes/test/continuation/test-continuation.component.html
@@ -1,21 +1,9 @@
-<header>
-    <head>
-        <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-      </head>
-</header>
-
 <body>
     <div class="container-edge">
-        <div class="header">
+        <div class="container">
             <div class="big-logo animate__animated animate__pulse animate__infinite animate__slow">
                 <img src="./../../../../assets/images/logos/logo-verse.png">
             </div>
-        </div>
-
-        <div class="container">
             <div class="screen-info">
                 <h1>Continuar jogo</h1>
                 <h2>Informe o seu código de usuário para continuar o teste!</h2>
@@ -29,7 +17,7 @@
                 
                 <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
                     <div id="card-form">
-                        <mat-form-field class="card-form-field " style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
                                 Digite aqui
                             </mat-label>
