--- a/frontend/src/app/routes/test/creation/test-creation.component.html
+++ b/frontend/src/app/routes/test/creation/test-creation.component.html
@@ -1,12 +1,9 @@
 <body>
     <div class="container-edge">
-        <div class="header">
+        <div class="container">
             <div class="big-logo">
                 <img src="./../../../../assets/images/logos/logo-verse.png">
             </div>
-        </div>
-        
-        <div class="container">
             <div class="screen-info">
                 <h1>Criar um novo jogo</h1>
                 <h2>Informe seu nome para começar um novo teste!</h2>
@@ -19,7 +16,7 @@
 
                 <form #form="ngForm" (ngSubmit)="onSubmit()">
                     <div id="card-form">
-                        <mat-form-field class="card-form-field" style="width: 86% !important;">
+                        <mat-form-field class="card-form-field">
                             <mat-label class="card-form-field-label">
                                 Digite aqui
                             </mat-label>
